syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message invBindData_proto
{
	optional uint32 count = 1;
	repeated float data = 2;
}