syntax = "proto3";

option optimize_for = LITE_RUNTIME;

message hierarchyData_proto
{
	optional uint32 count = 1;
	optional uint32 maxDepth = 2;
	repeated uint32 data = 3;
}